# python-project-50

./: .coverage  .gitignore  Makefile  README.md  _init_.py  coverage.xml  gendiff.py  pyproject.toml
.github/workflows/: project-check.yml
gendiff/: _init_.py  cli.py  diff_generator.py  generate.py  generate_diff.py  parser.py
gendiff/format/: choice_formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_recurce_diff.py
tests/fixtures/: result.txt  tru_json_result.txt
