[project]
authors = [
    {name = "Spring-Silver-Bird", email = "adelaida_19@mail.ru"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pytest-cov<6.0.0,>=5.0.0",
    "flake8<8.0.0,>=7.0.0",
    "pyyaml<7.0.0,>=6.0.2",
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "pytest<9.0.0,>=8.2.0",
]

[tool.pdm.build]
includes = [
    "gendiff",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.9.5",
]
